--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^7.7.1",
     "react-scripts": "^5.0.1",
     "react-tooltip": "^5.29.1",
+    "recharts": "^3.1.2",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
